style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--navbar-background);
    font-family: 'DM Sans', sans-serif;
    transition-duration: 0.5s;
    transition-timing-function: linear;
}

:root {
    --background: #151728;
    ;
    --shadow: rgba(0, 0, 0, 0.1) 0px 3px 6px 0px, rgba(0, 0, 0, 0.08) 0px 1px 3px 0px;
}

body {
    background-color: var(--background);
}

.main {
    display: flex;
}

.overlay {
    width: 100%;
    position: fixed;
    background-color: white;
    height: 0%;
    z-index: -1;
    transition-duration: 0.5s;
    transition-timing-function: linear;
}



.sidenav_container {
    width: 5rem;

}

.sidenav {
    height: 100vh;
    width: 4rem;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    position: fixed;
    height: 100%;
    transition-duration: 0.2s;
    transition-timing-function: ease-out;
    z-index: 2;
    background-color: #33373e;
    padding: 0 0 0 2px;
}


.sidenav_2 {
    width: 5rem;
}


.sidenavlinks {
    display: flex;
    align-items: center;
    gap: 44px;
    width: fit-content;
    cursor: pointer;
    text-decoration: none;
}



.arrow_left {
    display: none;
    align-self: end;
    width: 25px;
    margin-right: 2px;
    margin-top: 10px;
    cursor: pointer;
    transition-duration: 0.5s;
    transition-timing-function: linear;
}

.title {
    display: none;
    color: white;
    font-family: 'Kumbh Sans', sans-serif;
    font-size: 18px;
    letter-spacing: 3px;
    margin: 0px 14px 0px 12px;
    align-self: center;
    margin-top: 36px;
    transition-duration: 0.5s;
    transition-timing-function: linear;
}

.hamburger {
    display: block;
    margin-top: 2rem;
    cursor: pointer;
    width: 35px;
    align-self: center;
    transition-duration: 0.5s;
    transition-timing-function: linear;
}

.pathh {
    fill: #ffffff;
}



.menu {
    margin-left: 0rem;
    margin-top: 4rem;
    display: flex;
    justify-content: center;
}

.menu_ul {
    display: flex;
    flex-direction: column;
    gap: 26px;
    margin-left: 5rem;
}

.menu_title {
    margin-bottom: 20px;
    font-family: 'DM Sans', sans-serif;
    color: #fffffff5;
    font-weight: 500;
    font-size: 17px;
    letter-spacing: 1px;
    display: none;
}


.bi {
    cursor: pointer;
}

.path {
    fill: #287bff;
    color: white;
}


.menu_ul li span {
    color: #ffffff9e;
    font-size: 15px;
    font-weight: 500;
    letter-spacing: 0px;
    /* display: none;*/
}




body.minimize_siderbar .sidenav {
    width: 14rem;
    transition-duration: 0.2s;
    transition-timing-function: linear;
    height: 100%;
}

body.minimize_siderbar .sidenav_container {
    width: 16rem;
    transition-duration: 0.2s;
    transition-timing-function: linear;
}

body.minimize_siderbar .arrow_left {
    display: block;
    transition-duration: 0.2s;
    transition-timing-function: linear;
}

body.minimize_siderbar .title {
    display: block;
    transition-duration: 0.2s;
    transition-timing-function: linear;
}

body.minimize_siderbar .hamburger {
    display: none;
    transition-duration: 0.2s;
    transition-timing-function: linear;

}

body.minimize_siderbar .title_span {
    display: inline-block;
}

body.minimize_siderbar .menu_title {
    display: block;
}

body.minimize_siderbar .menu {
    margin-left: 2rem;
    margin-top: 4rem;
    display: block;
}


body.minimize_siderbar .menu_ul {
    display: flex;
    flex-direction: column;
    gap: 26px;
    margin-left: 0rem;
}



body.minimize_siderbar .sidenavlinks {

    gap: 15px;
}


body.minimize_siderbar .section_one {
    margin-left: 1rem;
    transition-duration: 0.2s;
    transition-timing-function: linear;

}

body.minimize_siderbar .Now_playing_movies_container {
    width: 79vw;
    position: relative;
    transition-duration: 0.2s;
    transition-timing-function: linear;
}

body.minimize_siderbar .light_darkmode {
    right: 25%;
    transition-duration: 0.2s;
    transition-timing-function: linear;
}

body.minimize_siderbar .navContainer {
    left: 225px;

}

body.minimize_siderbar .movieDetailnavContainer {
    left: 223px;

}




body.minimize_siderbar .sidenav_child_container {
    width: 14rem;
    transition-duration: 0.2s;
    transition-timing-function: linear;
}

body.minimize_siderbar .section_one_movieDetail {
    margin-left: 14rem;
    transition-duration: 0.2s;
    transition-timing-function: linear;
}



.section_one {
    margin-left: 1rem;
    transition-duration: 0.3s;
    transition-timing-function: linear;
    overflow: hidden;


}

.nav_paremt_conatainer {
    background-color: var(--background);
    height: 5rem;
    z-index: 2;

    transition-timing-function: linear;
}


.navContainer {
    Display: flex;
    background-color: #151728c2;
    height: 5rem;
    align-items: center;
    padding: 0px 146px 0px 63px;
    justify-content: space-between;
    position: fixed;
    width: -webkit-fill-available;
    z-index: 2;
    left: 81px;
    margin: 0 0 0 0px;
    transition-duration: 0.2s;
    transition-timing-function: ease-out;
    backdrop-filter: blur(4px);
}
/* ... */

